--- a/src/coin_exchange/templates/admin/order/order_bank.html
+++ b/src/coin_exchange/templates/admin/order/order_bank.html
@@ -5,7 +5,7 @@
     <div class="breadcrumbs">
         <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
         &rsaquo;
-        <a href="{% url 'admin:coin_exchange_order_changelist' %}">{% trans 'Bank Orders' %}</a>
+        <a href="{% url 'admin:coin_exchange_order_changelist' %}?{{ url_filters }}">{% trans 'Bank Orders' %}</a>
         &rsaquo;
         Change Status
     </div>
